# Breakout-Game

./: .gitignore  CMakeLists.txt
include/: Shader.h
include/glad/: glad.h
shaders/: fragment.glsl
src/: Shader.cpp  glad.c  main.cpp
